--- a/index.html
+++ b/index.html
@@ -15,72 +15,123 @@
     <div class="todo-container">
         <div class="input-container">
             <input type="text" placeholder="Enter a task">
-            <iconify-icon id="add-task" icon="material-symbols:add" onclick="submitTask()"
+            <iconify-icon id="add-task" icon="material-symbols:add" onclick="addTask()"
                 style="color: white"></iconify-icon>
         </div>
-        <ul class="list">
-
+        <ul class="taskList"></ul>
+        <div class="separator"></div>
     </div>
     <button onclick="removeTasks()">Remove all tasks</button>
+
+    <script type="text/javascript">
+        var key = localStorage.length;
+
+        window.onload = function getTasks() {
+            const taskList = document.querySelector('.taskList');
+            // for (let i = 0; i < localStorage.length; i++) {
+            //     const taskKey = localStorage.key(i);
+            //     const taskValue = localStorage.getItem(taskKey);
+            //     const taskItem = createTaskItem(taskValue, taskKey);
+            //     taskList.appendChild(taskItem);
+            // }
+        }
+
+        // function loadTasks() {
+        //     const taskList = document.querySelector('.taskList');
+        //     for (let i = 0; i < localStorage.length; i++) {
+        //         const taskKey = localStorage.key(i);
+        //         const taskValue = localStorage.getItem(taskKey);
+        //         const taskItem = createTaskItem(taskValue, taskKey);
+        //         taskList.appendChild(taskItem);
+        //     }
+        // }
+
+        // // function loadTasks() {
+        // //     const taskList = document.querySelector('.taskList');
+        // //     for (let i = 0; i < localStorage.length; i++) {
+        // //         const taskKey = localStorage.key(i);
+        // //         const taskValue = localStorage.getItem(taskKey);
+        // //         const taskItem = createTaskItem(taskValue, taskKey);
+        // //         taskList.appendChild(taskItem);
+        // //     }
+        // // }
+
+        function addTask() {
+            const taskList = document.querySelector('.taskList');
+            const newTask = createTaskItem(); 
+            taskList.appendChild(newTask);
+        }
+
+        function createTaskItem() {
+            const taskItem = document.createElement('li');
+            var inputValue = document.querySelector('input').value;
+
+            taskItem.className = 'task-item';
+
+            const taskText = document.createElement('span');
+            taskText.className = 'task-text';
+            taskText.textContent = inputValue;
+            taskItem.appendChild(taskText);
+
+            const taskControls = document.createElement('div');
+            taskControls.className = 'task-controls';
+
+            taskControls.appendChild(createCheckbox());
+            taskControls.appendChild(createDeleteIcon(taskItem));
+
+            taskItem.appendChild(taskControls);
+
+            localStorage.setItem(key, inputValue);
+            key++;
+
+            return taskItem;
+        }
+
+        function createDeleteIcon(taskItem) {
+            const deleteIcon = document.createElement('iconify-icon');
+            deleteIcon.setAttribute('icon', 'material-symbols:delete');
+            deleteIcon.className = 'delete-icon';
+
+            deleteIcon.onclick = function () {
+                removeTask(taskItem);
+            };
+
+            return deleteIcon;
+        }
+
+        function createCheckbox() {
+            const checkboxContainer = document.createElement('div');
+            checkboxContainer.className = 'checkbox-container';
+
+            const checkbox = document.createElement('input');
+            checkbox.type = 'checkbox';
+            checkboxContainer.appendChild(checkbox);
+
+            const checkmarkIcon = document.createElement('iconify-icon');
+            checkmarkIcon.setAttribute('icon', 'material-symbols:done');
+            checkmarkIcon.className = 'checkmark';
+            checkmarkIcon.style.color = 'white';
+            checkboxContainer.appendChild(checkmarkIcon);
+
+            return checkboxContainer;
+        }
+
+        function createSeparator() {
+
+        }
+
+        function removeTask(taskItem) {
+            const taskKey = taskItem.getAttribute('data-key');
+            localStorage.removeItem(taskKey);
+            taskItem.remove();
+        }
+
+        function removeTasks() {
+            document.querySelector('.taskList').innerHTML = "";
+            localStorage.clear();
+            key = 0;
+        }
+    </script>
 </body>
-<script type="text/javascript">
-    var key = localStorage.length
-
-
-    window.onload = function getTasks() {
-        for (let i = 0; i < localStorage.length; i++) {
-            let task = localStorage.getItem(localStorage.key(i));
-            document.querySelector('.list').insertAdjacentHTML('beforeend', task);
-        }
-    }
-
-    function submitTask() {
-        var text = document.querySelector('input').value;
-
-        if (text.trim() === "") {
-            return;
-        }
-
-        var task = `
-        <li class="task-item">
-            <span class="task-text">${text}</span>
-            <div class="task-controls">
-                <div class="checkbox-container">
-                <input type="checkbox">
-                <iconify-icon icon="material-symbols:done" class="checkmark"  style="color: white"></iconify-icon>
-                </div>
-                <iconify-icon icon="material-symbols:delete" class="delete-icon" onclick="removeTask(this)"></iconify-icon>
-            </div>
-        </li>
-    `;
-
-        document.querySelector('.list').insertAdjacentHTML('beforeend', task);
-        document.querySelector('input').value = "";
-
-        localStorage.setItem(key, task);
-        key++;
-    }
-
-    function removeTasks() {
-        document.querySelector('.list').innerHTML = "";
-        key = 0;
-        localStorage.clear();
-    }
-
-    function removeTask(element) {
-        // Find the parent <li> element of the clicked delete icon
-        const taskItem = element.closest('li');
-
-        // Get the unique key for the task from the data-key attribute
-        const taskKey = taskItem.getAttribute('data-key');
-
-        // Remove the task from the DOM
-        taskItem.remove();
-
-        // Remove the task from localStorage using the unique key
-        localStorage.removeItem(taskKey);
-    }
-
-</script>
 
 </html>
