html and scss improvements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/main.css">
+    <link rel="icon" type="image/x-icon" href="favicon.svg">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
     <title>ToDo</title>
 </head>
@@ -135,7 +136,7 @@
         }
 
         function removeTask(taskItem) {
-            taskItem.classList.add('fade-out'); // Add the fade-out class
+            taskItem.classList.add('fade-out'); 
             const taskKey = taskItem.getAttribute('data-key');
             localStorage.removeItem(taskKey);
             taskItem.remove();
