--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="scss/main.css">
     <link rel="icon" type="image/x-icon" href="favicon.svg">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
-    <title>ToDo</title>
+    <title>To-Do App</title>
 </head>
 
 <body>
     <div class="background-noise"></div>
-    <h1>ToDo <a href="https://github.com/vitkarino/to-do" target="_blank" class="credits">GitHub</a></h1>
+    <h1>To-Do <a href="https://github.com/vitkarino/to-do" target="_blank" class="credits">GitHub</a></h1>
     <div class="input-container">
         <input type="text" placeholder="Enter a task">
         <iconify-icon id="add-task" icon="material-symbols:add" onclick="addTask()" style="color: white"></iconify-icon>
